deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containerd-example
  labels:
    app: containerd-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containerd-example
  template:
    metadata:
      labels:
        app: containerd-example
    spec:
      containers:
        - image: mycluster-registry:5000/containerd-example:c92719c4
          name: containerd-example

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: containerd-example-service
spec:
  type: ClusterIP
  selector:
    app: containerd-example
  ports:
    - port: 80
      targetPort: 3000
